--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ addons:
   sonarcloud:
     - organization: Dovantech Github
     - token:
-       secure: #Token
+       secure: dafe9422fd40d91e2cf44d7465d9b9fec4db6e9e #Token
 
 script:
  - sonar-scanner
