--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ language: c
 
 addons:
   sonarcloud:
-    - organization: Dovantech Github
-    - token:
+    organization: "mrpoudel"
+     - token:
        secure: 57ddfe081ffe0318ad2f1fcaaef894d5ab525d1e
-
+       
 script:
  - sonar-scanner
  - cmake .
