--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ language: c
 addons:
   sonarcloud:
     organization: "mrpoudel"
-     - token:
+    token:
        secure: 57ddfe081ffe0318ad2f1fcaaef894d5ab525d1e
        
 env:
