--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.organization=mrpoudel
 #This is generated from the sonar cloud: https://sonarcloud.io/account/security/
 sonar.login=ee5834afd5a8d022dc0d6db0c7ea87b47ce285e3
 #483805c5fedb0b18378ea7403f920dda82d0a877
-#sonar.password=
+sonar.password=
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=cmake-example
